# AutoQPF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py
auto_qpf/: __init__.py  enums.py  generate_chapters.py  long_path.py  qpf.py  qpf_exceptions.py
qpf_creator/: qpf.py
